Prevent selection of canvas on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,10 @@ html, body {
   width: 100vw; 
   height: 100vh;
   touch-action: none;
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /*************************** Floating App Menu (Top Right) ***************************/
